src/MGprogrammingParser.py
# Generated from src/MGprogramming.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class MGprogrammingParser ( Parser ):

    grammarFileName = "MGprogramming.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "'todorhoiloh'", "'+'", "'-'", 
                     "'*'", "':'", "'^'", "'|'", "'>'", "'<'", "'>='", "'<='", 
                     "'='", "'=/='", "'\n'", "'ehleh'", "'duusgah'", "'angi'", 
                     "'ehleh_angi'", "'duusgah_angi'", "'ehleh_davtalt'", 
                     "'duusgah_davtalt'", "'zuur'", "'urgeljleh'", "'zavsar'", 
                     "'d'", "'aas'", "'tuld'", "'nii tuld'", "'hervee'", 
                     "'ner'", "'butsah'", "'hevleh'", "'orolt'", "<INVALID>", 
                     "'buhel'", "'urt'", "'butarhai'", "'ih_butarhai'", 
                     "'temdegt'", "'mor'", "'tiim_ugui'", "'jagsaalt'", 
                     "'bagts'", "'buleg'", "'>>'", "'>>>'", "'<<<'", "<INVALID>", 
                     "<INVALID>", "'('", "')'", "'['", "']'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "ASSIGN_VALUE", "PLUS", 
                      "MINUS", "MULTIPLY", "DIVIDE", "POWER", "MODULO", 
                      "GREATER_THAN", "LESSER_THAN", "GREATER_OR_EQUAL", 
                      "LESSER_OR_EQUAL", "EQUAL", "NOT_EQUAL", "NEW_LINE", 
                      "START_FUNCTION", "END_FUNCTION", "CLASS_DEF", "START_CLASS", 
                      "END_CLASS", "START_LOOP", "END_LOOP", "WHILE", "CONTINUE", 
                      "BREAK", "FOR", "FOR_FROM", "FOR_TO", "FOR_JUMP", 
                      "IF", "FUNCT_NAME", "RETURN", "PRINT", "INPUT", "VAR_TYPE", 
                      "INT", "LONG", "FLOAT", "DOUBLE", "CHAR", "STRING", 
                      "BOOLEAN", "LIST", "SET", "DICT", "COMMENT", "START_LONG_COMMENT", 
                      "END_LONG_COMMENT", "NUMBER", "VARIABLE", "OPEN_BRACKET", 
                      "CLOSE_BRACKET", "OPEN_LIST_BRACKET", "CLOSE_LIST_BRACKET", 
                      "DICT_OPEN_BRACKET", "DICT_CLOSE_BRACKET", "WS" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_class_def = 2
    RULE_function_def = 3
    RULE_args = 4
    RULE_function_body = 5
    RULE_assign = 6
    RULE_for_loop = 7
    RULE_if_stmt = 8
    RULE_while_loop = 9
    RULE_loop_body = 10
    RULE_return_stmt = 11
    RULE_function_call = 12
    RULE_comment = 13
    RULE_array = 14
    RULE_table = 15
    RULE_dictionary = 16

    ruleNames =  [ "program", "statement", "class_def", "function_def", 
                   "args", "function_body", "assign", "for_loop", "if_stmt", 
                   "while_loop", "loop_body", "return_stmt", "function_call", 
                   "comment", "array", "table", "dictionary" ]

    EOF = Token.EOF
    T__0=1
    ASSIGN_VALUE=2
    PLUS=3
    MINUS=4
    MULTIPLY=5
    DIVIDE=6
    POWER=7
    MODULO=8
    GREATER_THAN=9
    LESSER_THAN=10
    GREATER_OR_EQUAL=11
    LESSER_OR_EQUAL=12
    EQUAL=13
    NOT_EQUAL=14
    NEW_LINE=15
    START_FUNCTION=16
    END_FUNCTION=17
    CLASS_DEF=18
    START_CLASS=19
    END_CLASS=20
    START_LOOP=21
    END_LOOP=22
    WHILE=23
    CONTINUE=24
    BREAK=25
    FOR=26
    FOR_FROM=27
    FOR_TO=28
    FOR_JUMP=29
    IF=30
    FUNCT_NAME=31
    RETURN=32
    PRINT=33
    INPUT=34
    VAR_TYPE=35
    INT=36
    LONG=37
    FLOAT=38
    DOUBLE=39
    CHAR=40
    STRING=41
    BOOLEAN=42
    LIST=43
    SET=44
    DICT=45
    COMMENT=46
    START_LONG_COMMENT=47
    END_LONG_COMMENT=48
    NUMBER=49
    VARIABLE=50
    OPEN_BRACKET=51
    CLOSE_BRACKET=52
    OPEN_LIST_BRACKET=53
    CLOSE_LIST_BRACKET=54
    DICT_OPEN_BRACKET=55
    DICT_CLOSE_BRACKET=56
    WS=57

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MGprogrammingParser.EOF, 0)

        def class_def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MGprogrammingParser.Class_defContext)
            else:
                return self.getTypedRuleContext(MGprogrammingParser.Class_defContext,i)


        def function_def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MGprogrammingParser.Function_defContext)
            else:
                return self.getTypedRuleContext(MGprogrammingParser.Function_defContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MGprogrammingParser.StatementContext)
            else:
                return self.getTypedRuleContext(MGprogrammingParser.StatementContext,i)


        def comment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MGprogrammingParser.CommentContext)
            else:
                return self.getTypedRuleContext(MGprogrammingParser.CommentContext,i)


        def getRuleIndex(self):
            return MGprogrammingParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = MGprogrammingParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 38
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 34
                    self.class_def()
                    pass

                elif la_ == 2:
                    self.state = 35
                    self.function_def()
                    pass

                elif la_ == 3:
                    self.state = 36
                    self.statement()
                    pass

                elif la_ == 4:
                    self.state = 37
                    self.comment()
                    pass


                self.state = 40 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MGprogrammingParser.CLASS_DEF) | (1 << MGprogrammingParser.WHILE) | (1 << MGprogrammingParser.FOR) | (1 << MGprogrammingParser.IF) | (1 << MGprogrammingParser.FUNCT_NAME) | (1 << MGprogrammingParser.RETURN) | (1 << MGprogrammingParser.VAR_TYPE) | (1 << MGprogrammingParser.COMMENT) | (1 << MGprogrammingParser.START_LONG_COMMENT))) != 0)):
                    break

            self.state = 42
            self.match(MGprogrammingParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign(self):
            return self.getTypedRuleContext(MGprogrammingParser.AssignContext,0)


        def for_loop(self):
            return self.getTypedRuleContext(MGprogrammingParser.For_loopContext,0)


        def if_stmt(self):
            return self.getTypedRuleContext(MGprogrammingParser.If_stmtContext,0)


        def while_loop(self):
            return self.getTypedRuleContext(MGprogrammingParser.While_loopContext,0)


        def return_stmt(self):
            return self.getTypedRuleContext(MGprogrammingParser.Return_stmtContext,0)


        def function_call(self):
            return self.getTypedRuleContext(MGprogrammingParser.Function_callContext,0)


        def comment(self):
            return self.getTypedRuleContext(MGprogrammingParser.CommentContext,0)


        def getRuleIndex(self):
            return MGprogrammingParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = MGprogrammingParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 51
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MGprogrammingParser.VAR_TYPE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 44
                self.assign()
                pass
            elif token in [MGprogrammingParser.FOR]:
                self.enterOuterAlt(localctx, 2)
                self.state = 45
                self.for_loop()
                pass
            elif token in [MGprogrammingParser.IF]:
                self.enterOuterAlt(localctx, 3)
                self.state = 46
                self.if_stmt()
                pass
            elif token in [MGprogrammingParser.WHILE]:
                self.enterOuterAlt(localctx, 4)
                self.state = 47
                self.while_loop()
                pass
            elif token in [MGprogrammingParser.RETURN]:
                self.enterOuterAlt(localctx, 5)
                self.state = 48
                self.return_stmt()
                pass
            elif token in [MGprogrammingParser.FUNCT_NAME]:
                self.enterOuterAlt(localctx, 6)
                self.state = 49
                self.function_call()
                pass
            elif token in [MGprogrammingParser.COMMENT, MGprogrammingParser.START_LONG_COMMENT]:
                self.enterOuterAlt(localctx, 7)
                self.state = 50
                self.comment()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_defContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS_DEF(self):
            return self.getToken(MGprogrammingParser.CLASS_DEF, 0)

        def VARIABLE(self):
            return self.getToken(MGprogrammingParser.VARIABLE, 0)

        def START_CLASS(self):
            return self.getToken(MGprogrammingParser.START_CLASS, 0)

        def END_CLASS(self):
            return self.getToken(MGprogrammingParser.END_CLASS, 0)

        def NEW_LINE(self):
            return self.getToken(MGprogrammingParser.NEW_LINE, 0)

        def function_def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MGprogrammingParser.Function_defContext)
            else:
                return self.getTypedRuleContext(MGprogrammingParser.Function_defContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MGprogrammingParser.StatementContext)
            else:
                return self.getTypedRuleContext(MGprogrammingParser.StatementContext,i)


        def comment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MGprogrammingParser.CommentContext)
            else:
                return self.getTypedRuleContext(MGprogrammingParser.CommentContext,i)


        def getRuleIndex(self):
            return MGprogrammingParser.RULE_class_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass_def" ):
                listener.enterClass_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass_def" ):
                listener.exitClass_def(self)




    def class_def(self):

        localctx = MGprogrammingParser.Class_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_class_def)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.match(MGprogrammingParser.CLASS_DEF)
            self.state = 54
            self.match(MGprogrammingParser.VARIABLE)
            self.state = 55
            self.match(MGprogrammingParser.START_CLASS)
            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MGprogrammingParser.WHILE) | (1 << MGprogrammingParser.FOR) | (1 << MGprogrammingParser.IF) | (1 << MGprogrammingParser.FUNCT_NAME) | (1 << MGprogrammingParser.RETURN) | (1 << MGprogrammingParser.VAR_TYPE) | (1 << MGprogrammingParser.COMMENT) | (1 << MGprogrammingParser.START_LONG_COMMENT))) != 0):
                self.state = 59
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                if la_ == 1:
                    self.state = 56
                    self.function_def()
                    pass

                elif la_ == 2:
                    self.state = 57
                    self.statement()
                    pass

                elif la_ == 3:
                    self.state = 58
                    self.comment()
                    pass


                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 64
            self.match(MGprogrammingParser.END_CLASS)
            self.state = 65
            self.match(MGprogrammingParser.NEW_LINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_defContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCT_NAME(self):
            return self.getToken(MGprogrammingParser.FUNCT_NAME, 0)

        def VARIABLE(self):
            return self.getToken(MGprogrammingParser.VARIABLE, 0)

        def OPEN_BRACKET(self):
            return self.getToken(MGprogrammingParser.OPEN_BRACKET, 0)

        def CLOSE_BRACKET(self):
            return self.getToken(MGprogrammingParser.CLOSE_BRACKET, 0)

        def START_FUNCTION(self):
            return self.getToken(MGprogrammingParser.START_FUNCTION, 0)

        def function_body(self):
            return self.getTypedRuleContext(MGprogrammingParser.Function_bodyContext,0)


        def END_FUNCTION(self):
            return self.getToken(MGprogrammingParser.END_FUNCTION, 0)

        def NEW_LINE(self):
            return self.getToken(MGprogrammingParser.NEW_LINE, 0)

        def args(self):
            return self.getTypedRuleContext(MGprogrammingParser.ArgsContext,0)


        def getRuleIndex(self):
            return MGprogrammingParser.RULE_function_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_def" ):
                listener.enterFunction_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_def" ):
                listener.exitFunction_def(self)




    def function_def(self):

        localctx = MGprogrammingParser.Function_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_function_def)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(MGprogrammingParser.FUNCT_NAME)
            self.state = 68
            self.match(MGprogrammingParser.VARIABLE)
            self.state = 69
            self.match(MGprogrammingParser.OPEN_BRACKET)
            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MGprogrammingParser.VAR_TYPE:
                self.state = 70
                self.args()


            self.state = 73
            self.match(MGprogrammingParser.CLOSE_BRACKET)
            self.state = 74
            self.match(MGprogrammingParser.START_FUNCTION)
            self.state = 75
            self.function_body()
            self.state = 76
            self.match(MGprogrammingParser.END_FUNCTION)
            self.state = 77
            self.match(MGprogrammingParser.NEW_LINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR_TYPE(self, i:int=None):
            if i is None:
                return self.getTokens(MGprogrammingParser.VAR_TYPE)
            else:
                return self.getToken(MGprogrammingParser.VAR_TYPE, i)

        def VARIABLE(self, i:int=None):
            if i is None:
                return self.getTokens(MGprogrammingParser.VARIABLE)
            else:
                return self.getToken(MGprogrammingParser.VARIABLE, i)

        def getRuleIndex(self):
            return MGprogrammingParser.RULE_args

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgs" ):
                listener.enterArgs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgs" ):
                listener.exitArgs(self)




    def args(self):

        localctx = MGprogrammingParser.ArgsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_args)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(MGprogrammingParser.VAR_TYPE)
            self.state = 80
            self.match(MGprogrammingParser.VARIABLE)
            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MGprogrammingParser.T__0:
                self.state = 81
                self.match(MGprogrammingParser.T__0)
                self.state = 82
                self.match(MGprogrammingParser.VAR_TYPE)
                self.state = 83
                self.match(MGprogrammingParser.VARIABLE)
                self.state = 88
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_bodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MGprogrammingParser.AssignContext)
            else:
                return self.getTypedRuleContext(MGprogrammingParser.AssignContext,i)


        def for_loop(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MGprogrammingParser.For_loopContext)
            else:
                return self.getTypedRuleContext(MGprogrammingParser.For_loopContext,i)


        def if_stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MGprogrammingParser.If_stmtContext)
            else:
                return self.getTypedRuleContext(MGprogrammingParser.If_stmtContext,i)


        def while_loop(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MGprogrammingParser.While_loopContext)
            else:
                return self.getTypedRuleContext(MGprogrammingParser.While_loopContext,i)


        def return_stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MGprogrammingParser.Return_stmtContext)
            else:
                return self.getTypedRuleContext(MGprogrammingParser.Return_stmtContext,i)


        def function_call(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MGprogrammingParser.Function_callContext)
            else:
                return self.getTypedRuleContext(MGprogrammingParser.Function_callContext,i)


        def comment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MGprogrammingParser.CommentContext)
            else:
                return self.getTypedRuleContext(MGprogrammingParser.CommentContext,i)


        def getRuleIndex(self):
            return MGprogrammingParser.RULE_function_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_body" ):
                listener.enterFunction_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_body" ):
                listener.exitFunction_body(self)




    def function_body(self):

        localctx = MGprogrammingParser.Function_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_function_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 96
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [MGprogrammingParser.VAR_TYPE]:
                    self.state = 89
                    self.assign()
                    pass
                elif token in [MGprogrammingParser.FOR]:
                    self.state = 90
                    self.for_loop()
                    pass
                elif token in [MGprogrammingParser.IF]:
                    self.state = 91
                    self.if_stmt()
                    pass
                elif token in [MGprogrammingParser.WHILE]:
                    self.state = 92
                    self.while_loop()
                    pass
                elif token in [MGprogrammingParser.RETURN]:
                    self.state = 93
                    self.return_stmt()
                    pass
                elif token in [MGprogrammingParser.FUNCT_NAME]:
                    self.state = 94
                    self.function_call()
                    pass
                elif token in [MGprogrammingParser.COMMENT, MGprogrammingParser.START_LONG_COMMENT]:
                    self.state = 95
                    self.comment()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 98 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MGprogrammingParser.WHILE) | (1 << MGprogrammingParser.FOR) | (1 << MGprogrammingParser.IF) | (1 << MGprogrammingParser.FUNCT_NAME) | (1 << MGprogrammingParser.RETURN) | (1 << MGprogrammingParser.VAR_TYPE) | (1 << MGprogrammingParser.COMMENT) | (1 << MGprogrammingParser.START_LONG_COMMENT))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR_TYPE(self):
            return self.getToken(MGprogrammingParser.VAR_TYPE, 0)

        def VARIABLE(self, i:int=None):
            if i is None:
                return self.getTokens(MGprogrammingParser.VARIABLE)
            else:
                return self.getToken(MGprogrammingParser.VARIABLE, i)

        def ASSIGN_VALUE(self):
            return self.getToken(MGprogrammingParser.ASSIGN_VALUE, 0)

        def NEW_LINE(self):
            return self.getToken(MGprogrammingParser.NEW_LINE, 0)

        def NUMBER(self):
            return self.getToken(MGprogrammingParser.NUMBER, 0)

        def getRuleIndex(self):
            return MGprogrammingParser.RULE_assign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)




    def assign(self):

        localctx = MGprogrammingParser.AssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_assign)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(MGprogrammingParser.VAR_TYPE)
            self.state = 101
            self.match(MGprogrammingParser.VARIABLE)
            self.state = 102
            self.match(MGprogrammingParser.ASSIGN_VALUE)
            self.state = 103
            _la = self._input.LA(1)
            if not(_la==MGprogrammingParser.NUMBER or _la==MGprogrammingParser.VARIABLE):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 104
            self.match(MGprogrammingParser.NEW_LINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class For_loopContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(MGprogrammingParser.FOR, 0)

        def VARIABLE(self):
            return self.getToken(MGprogrammingParser.VARIABLE, 0)

        def FOR_FROM(self):
            return self.getToken(MGprogrammingParser.FOR_FROM, 0)

        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(MGprogrammingParser.NUMBER)
            else:
                return self.getToken(MGprogrammingParser.NUMBER, i)

        def FOR_TO(self):
            return self.getToken(MGprogrammingParser.FOR_TO, 0)

        def FOR_JUMP(self):
            return self.getToken(MGprogrammingParser.FOR_JUMP, 0)

        def OPEN_BRACKET(self):
            return self.getToken(MGprogrammingParser.OPEN_BRACKET, 0)

        def loop_body(self):
            return self.getTypedRuleContext(MGprogrammingParser.Loop_bodyContext,0)


        def CLOSE_BRACKET(self):
            return self.getToken(MGprogrammingParser.CLOSE_BRACKET, 0)

        def getRuleIndex(self):
            return MGprogrammingParser.RULE_for_loop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFor_loop" ):
                listener.enterFor_loop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFor_loop" ):
                listener.exitFor_loop(self)




    def for_loop(self):

        localctx = MGprogrammingParser.For_loopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_for_loop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(MGprogrammingParser.FOR)
            self.state = 107
            self.match(MGprogrammingParser.VARIABLE)
            self.state = 108
            self.match(MGprogrammingParser.FOR_FROM)
            self.state = 109
            self.match(MGprogrammingParser.NUMBER)
            self.state = 110
            self.match(MGprogrammingParser.FOR_TO)
            self.state = 111
            self.match(MGprogrammingParser.NUMBER)
            self.state = 112
            self.match(MGprogrammingParser.FOR_JUMP)
            self.state = 113
            self.match(MGprogrammingParser.NUMBER)
            self.state = 114
            self.match(MGprogrammingParser.OPEN_BRACKET)
            self.state = 115
            self.loop_body()
            self.state = 116
            self.match(MGprogrammingParser.CLOSE_BRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(MGprogrammingParser.IF, 0)

        def OPEN_BRACKET(self):
            return self.getToken(MGprogrammingParser.OPEN_BRACKET, 0)

        def VARIABLE(self):
            return self.getToken(MGprogrammingParser.VARIABLE, 0)

        def CLOSE_BRACKET(self):
            return self.getToken(MGprogrammingParser.CLOSE_BRACKET, 0)

        def START_LOOP(self):
            return self.getToken(MGprogrammingParser.START_LOOP, 0)

        def loop_body(self):
            return self.getTypedRuleContext(MGprogrammingParser.Loop_bodyContext,0)


        def END_LOOP(self):
            return self.getToken(MGprogrammingParser.END_LOOP, 0)

        def EQUAL(self):
            return self.getToken(MGprogrammingParser.EQUAL, 0)

        def GREATER_THAN(self):
            return self.getToken(MGprogrammingParser.GREATER_THAN, 0)

        def LESSER_THAN(self):
            return self.getToken(MGprogrammingParser.LESSER_THAN, 0)

        def GREATER_OR_EQUAL(self):
            return self.getToken(MGprogrammingParser.GREATER_OR_EQUAL, 0)

        def LESSER_OR_EQUAL(self):
            return self.getToken(MGprogrammingParser.LESSER_OR_EQUAL, 0)

        def NUMBER(self):
            return self.getToken(MGprogrammingParser.NUMBER, 0)

        def STRING(self):
            return self.getToken(MGprogrammingParser.STRING, 0)

        def getRuleIndex(self):
            return MGprogrammingParser.RULE_if_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_stmt" ):
                listener.enterIf_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
